[Change] Nuxt >> Next

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             <li class="filter" data-filter=".reactjs">React Js</li>
                             <li class="filter" data-filter=".nodejs">Node Js</li>
                             <li class="filter" data-filter=".angular">Angular</li>
-                            <li class="filter" data-filter=".nuxt">Nuxt js</li>
+                            <li class="filter" data-filter=".next">Next js</li>
                         </ul>
                     </div>
 
