--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
     <!-- Responsive css -->
     <link href="css/responsive.css" rel="stylesheet">
+    <!-- <link href="css/backgtound.css" rel="stylesheet"> -->
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="images/favicon.png"> -->
 </head>
 
 <body>
-
+    
     <!-- start section navbar -->
     <nav id="main-nav">
         <div class="row">
@@ -62,13 +63,18 @@
         <div class="container">
             <div class="header-content">
                 <h1><span class="typed"></span></h1>
-                <p>Web Developer</p>
+                <p>Developer</p>
             </div>
         </div>
     </div>
-    <!-- End section header -->
-    <hr>
 
+<div>
+<!-- 
+    <div class="bg"></div>
+    <div class="star-field">
+    <div class="layer"></div>
+    <div class="layer"></div>
+    <div class="layer"></div> -->
     <!-- start section about us -->
     <div id="about" class="paddsection">
         <div class="container">
@@ -85,9 +91,9 @@
                 <div class="col-lg-7">
                     <div class="about-descr">
 
-                        <p class="p-heading">Web Developer </p>
+                        <p class="p-heading">Developer </p>
                         <p class="separator">
-                            My skills as a web developer allow me to specialize in front-end development given my
+                            My skills as a developer allow me to specialize in front-end development given my
                             experience in all stages of the development cycle and all manner of dynamic web projects.
                         </p>
                         <p class="separator">
@@ -97,7 +103,7 @@
                         <p class="separator">
                             Furthermore, I am well versed in numerous programming languages, this includes HTML, Node
                             js, Javascript, CSS, MySQL, Sql Server, React js and Angular js.
-                        </p>
+                        </p> 
 
                     </div>
 
@@ -120,7 +126,7 @@
                     <li>Various bug fixes as requested by customers or supervisors</li>
                     <li>Develop website according to the needs of Customer</li>
                     <li>Deploy Web To Production</li>
-                    <li>Develop Frontend of Angular JS , Java Scrip , Reanct js , Jquery</li>
+                    <li>Develop Frontend of Angular JS , Java Scrip , React js , Jquery</li>
                     <li>Develop Backend of Node JS , C# .Net</li>
                     <li>Develop work flow processes to match the work of users.</li>
                 </ul>
